# teste-backend-b2bit

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
cinema/: models.py  serializers.py  urls.py  views.py
cinema/management/commands/: seed_db.py
cinema/migrations/: 0001_initial.py
cinema/services/: reservation.py
cinema/tests/: __init__.py  conftest.py  test_models.py  test_reservation.py  test_reservation_service.py  test_tickets.py  test_views.py
cinereserve/: asgi.py  settings.py  urls.py  wsgi.py
